# coro

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
cmake/: dependencies.cmake  options.cmake
include/coro/: async_generator.hpp  awaitable_traits.hpp  broken_promise.hpp  config.hpp  fmap.hpp  generator.hpp  is_awaitable.hpp  on_scope_exit.hpp  shared_task.hpp  single_consumer_event.hpp  static_thread_pool.hpp  sync_wait.hpp  task.hpp  when_all.hpp  when_all_ready.hpp
include/coro/detail/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  remove_rvalue_reference.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp
src/: auto_reset_event.cpp  auto_reset_event.hpp  lightweight_manual_reset_event.cpp  spin_mutex.cpp  spin_mutex.hpp  spin_wait.cpp  spin_wait.hpp  static_thread_pool.cpp
test/: async_generator_test.cpp  counted.cpp  counted.hpp  generator_test.cpp  sync_wait_test.cpp  task_test.cpp
